--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: python
 services: docker
 
 install:
-  - pip install molecule[docker]
+  - pip install molecule[docker] --pre
 
 script:
   - molecule test
