--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,8 +7,5 @@ aws_fpga_sdk_override_group: false
 # Install Xilinx XRT
 aws_fpga_xrt: true
 
-# Xilinx XRT version to install
-xilinx_xrt_version: "2018.3"
-
 # FPGA driver to install
-fpga_driver: "{{ ( aws_fpga_xrt | bool ) | ternary('xocl', '') }}"
+fpga_driver: ''
