--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,7 +10,12 @@ aws_fpga_xrt: true
 # FPGA driver to install
 aws_fpga_driver: ''
 
-# XRT packages from AWS
-s3_dev_ami_url: "https://s3.amazonaws.com/aws-fpga-developer-ami/1.6.0/Patches/\
-                 XRT_2018_3_RC3_Patch2/"
-aws_xrt_package: xrt_201830.2.1.0_7.6.1810
+# XRT CentOS 7 packages from AWS Developper AMI
+xilinx_xrt_version: '2019.1'
+xilinx_xrt_packages:
+  '2019.1': 1.7.0/Patches/XRT_2019_1_RC2/xrt_201910.2.2.0_7.6.1810
+  '2018.3': 1.6.0/Patches/XRT_2018_3_RC5/xrt_201830.2.1.0_7.6.1810
+  '2018.2': 1.5.0/Patches/XRT_2018_2_XDF_RC5/xrt_201802.2.1.0_7.5.1804
+
+s3_dev_ami_url: "https://aws-fpga-developer-ami.s3.amazonaws.com/"
+xrt_package: "{{ xilinx_xrt_packages[xilinx_xrt_version | string] }}"
