--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -66,6 +66,37 @@
     executable: /bin/bash
   when: not libfpga_mgmt.stat.exists
 
+- name: Download xrt/xrt-aws packages from AWS FPGA developper AMI
+  get_url:
+    url: "{{ s3_dev_ami_url }}{{ xrt_package }}-{{ item }}.rpm"
+    dest: "{{ aws_fpga_src.path }}/{{ xrt_package | basename }}-{{ item }}.rpm"
+  with_items:
+    - xrt
+    - aws
+  retries: 10
+  delay: 1
+  when: (aws_fpga_xrt | bool) and not libfpga_mgmt.stat.exists
+
+- name: Ensure xrt/xrt-aws packages dependencies are present
+  package:
+    name:
+      - "kernel-devel-{{ ansible_kernel }}"
+      - "kernel-headers-{{ ansible_kernel }}"
+      - epel-release
+    state: present
+  retries: 10
+  delay: 1
+  when: (aws_fpga_xrt | bool) and not libfpga_mgmt.stat.exists
+
+- name: Ensure xrt/xrt-aws packages are installed
+  yum:
+    name: "{{ aws_fpga_src.path }}/{{ xrt_package | basename }}-{{ item }}.rpm"
+    state: present
+  with_items:
+    - xrt
+    - aws
+  when: (aws_fpga_xrt | bool) and not libfpga_mgmt.stat.exists
+
 - name: Ensure AWS FPGA driver build dependencies are present
   package:
     name:
@@ -102,38 +133,6 @@
     - /usr/bin/make install
     - "/usr/sbin/modprobe {{ aws_fpga_driver }}"
   when: aws_fpga_driver != '' and not libfpga_mgmt.stat.exists
-
-# Force the use of as specific XRT, because it is the only version that work
-- name: Download xrt/xrt-aws packages
-  get_url:
-    url: "{{ s3_dev_ami_url }}{{ aws_xrt_package }}-{{ item }}.rpm"
-    dest: "{{ aws_fpga_src.path }}/{{ aws_xrt_package }}-{{ item }}.rpm"
-  with_items:
-    - xrt
-    - aws
-  retries: 10
-  delay: 1
-  when: (aws_fpga_xrt | bool) and not libfpga_mgmt.stat.exists
-
-- name: Ensure xrt/xrt-aws packages dependencies are present
-  package:
-    name:
-      - "kernel-devel-{{ ansible_kernel }}"
-      - "kernel-headers-{{ ansible_kernel }}"
-      - epel-release
-    state: present
-  retries: 10
-  delay: 1
-  when: (aws_fpga_xrt | bool) and not libfpga_mgmt.stat.exists
-
-- name: Ensure xrt/xrt-aws packages are installed
-  yum:
-    name: "{{ aws_fpga_src.path }}/{{ aws_xrt_package }}-{{ item }}.rpm"
-    state: present
-  with_items:
-    - xrt
-    - aws
-  when: (aws_fpga_xrt | bool) and not libfpga_mgmt.stat.exists
 
 - name: Clean up AWS FPGA temporary directory
   file:
