--- a/meta/main.yml
+++ b/meta/main.yml
@@ -24,10 +24,20 @@ galaxy_info:
     - ec2
 
 dependencies:
+  - role: accelize.linux_kernel
+    vars:
+      kernel_version: "{{ aws_linux_kernel_version }}"
+    when:
+      # Managed by "accelize.xilinx_xrt" if not RHEL/CentOS 7
+      - ansible_os_family == 'RedHat'
+      - ansible_distribution_major_version == "7"
+      - xilinx_xrt_ensure_compatible_kernel | bool
+
   - role: accelize.xilinx_xrt
     when:
       - aws_fpga_xrt | bool
-      # AWS provides special packages for CentOS 7
-      - ansible_os_family == 'Debian'
+      # AWS provides special packages for RHEL/CentOS 7
+      - "ansible_os_family != 'RedHat' or
+         ansible_distribution_major_version != '7'"
     vars:
       xilinx_xrt_aws: true
