--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -55,7 +55,9 @@
 - name: Ensure AWS FPGA build dependencies are present
   apt:
     name:
-      - build-essential
+      - gcc
+      - libc-dev
+      - make
       - pciutils
     state: present
     install_recommends: false
@@ -66,7 +68,8 @@
 - name: Ensure AWS FPGA build dependencies are present
   yum:
     name:
-      - "@Development tools"
+      - gcc
+      - make
       - pciutils
     state: present
     install_weak_deps: false
